--- a/hw2/hw2.qmd
+++ b/hw2/hw2.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Biostat 203B Homework 2"
-subtitle: Due Feb 10 @ 11:59PM
+subtitle: Due Feb 15 @ 11:59PM
 author: Cyrene Arputhasamy (705527395)
 format:
   html:
@@ -39,7 +39,10 @@ MIMIC data location
 mimic_path <- "~/mimic"
 ```
 
-In this exercise, we use tidyverse (ggplot2, dplyr, etc) to explore the [MIMIC-IV](https://mimic.mit.edu/docs/iv/) data introduced in [homework 1](https://ucla-biostat-203b.github.io/2023winter/hw/hw1/hw1.html) and to build a cohort of ICU stays.
+In this exercise, we use tidyverse (ggplot2, dplyr, etc) to explore the 
+[MIMIC-IV](https://mimic.mit.edu/docs/iv/) data introduced in [homework 1]
+(https://ucla-biostat-203b.github.io/2023winter/hw/hw1/hw1.html) and to build a 
+cohort of ICU stays.
 
 Display the contents of MIMIC data folder. 
 ```{r}
@@ -51,9 +54,13 @@ system(str_c("ls -l ", mimic_path, "/icu"), intern = TRUE)
 
 ## Q1. `read.csv` (base R) vs `read_csv` (tidyverse) vs `fread` (data.table)
 
-There are quite a few utilities in R for reading plain text data files. Let us test the speed of reading a moderate sized compressed csv file, `admissions.csv.gz`, by three programs: `read.csv` in base R, `read_csv` in tidyverse, and `fread` in the popular data.table package. 
+There are quite a few utilities in R for reading plain text data files. Let us 
+test the speed of reading a moderate sized compressed csv file, 
+`admissions.csv.gz`, by three programs: `read.csv` in base R, `read_csv` in 
+tidyverse, and `fread` in the popular data.table package. 
 
-Which function is fastest? Is there difference in the (default) parsed data types? (Hint: R function `system.time` measures run times.)
+Which function is fastest? Is there difference in the (default) parsed data 
+types? (Hint: R function `system.time` measures run times.)
 ```{r}
 getwd()
 setwd("~/mimic/core")
@@ -65,6 +72,10 @@ system.time(fread("admissions.csv.gz"))
 It took 3.824 seconds to read the file with `read.csv`, 1.256 seconds to read
 with `read_csv`, and 0.6 seconds to read with `fread`. The fasted method seems 
 to be using `fread`. There is a difference in the default parsed data types. 
+`read_csv()` will always read variables containing text as character variables. 
+`read.csv()` converts character variables to factors by default. `read_csv()`
+recognizes more data types. `fread()` is fast because it reads everything as
+character by default. 
 
 For later questions, we stick to the `read_csv` in tidyverse.
 
