--- a/hw2/hw2.qmd
+++ b/hw2/hw2.qmd
@@ -382,18 +382,30 @@ labevents_tble <- labevents_tble %>%
 4. Summarize the lab measurements by appropriate numerics and graphics. 
 ```{r}
 head(labevents_tble)
-ggplot(labevents_tble, aes(hematocrit)) + geom_boxplot()
-ggplot(labevents_tble, aes(`white blood cells`)) + geom_boxplot()
-ggplot(labevents_tble, aes(chloride)) + geom_boxplot()
-ggplot(labevents_tble, aes(creatinine)) + geom_boxplot()
-ggplot(labevents_tble, aes(potassium)) + geom_boxplot()
-ggplot(labevents_tble, aes(bicarbonate)) + geom_boxplot()
-ggplot(labevents_tble, aes(sodium)) + geom_boxplot()
-ggplot(labevents_tble, aes(glucose)) + geom_boxplot()
+ggplot(labevents_tble, aes(hematocrit)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(`white blood cells`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(chloride)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(creatinine)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(potassium)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(bicarbonate)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(sodium)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(labevents_tble, aes(glucose)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
 ```
 ## Q6. Vitals from charted events
 
-`chartevents.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/chartevents/>) contains all the charted data available for a patient. During their ICU stay, the primary repository of a patient’s information is their electronic chart. The `itemid` variable indicates a single measurement type in the database. The `value` variable is the value measured for `itemid`. The first 10 lines of `chartevents.csv.gz` are
+`chartevents.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/chartevents/>) 
+contains all the charted data available for a patient. During their ICU stay, the
+primary repository of a patient’s information is their electronic chart. The 
+`itemid` variable indicates a single measurement type in the database. The `value`
+variable is the value measured for `itemid`. The first 10 lines of `chartevents.csv.gz` are
 ```{r}
 system(
   str_c(
@@ -403,7 +415,8 @@ system(
   intern = TRUE
 )
 ```
-`d_items.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/d_items/>) is the dictionary for the `itemid` in `chartevents.csv.gz`. 
+`d_items.csv.gz` (<https://mimic.mit.edu/docs/iv/modules/icu/d_items/>) is the 
+dictionary for the `itemid` in `chartevents.csv.gz`. 
 ```{r}
 system(
   str_c(
@@ -420,9 +433,18 @@ d_items_tble <- read_csv("d_items.csv.gz") %>%
   print(width = Inf)
 ```
 
-1. We are interested in the vitals for ICU patients: heart rate (220045), mean non-invasive blood pressure (220181), systolic non-invasive blood pressure (220179), body temperature in Fahrenheit (223761), and respiratory rate (220210). Retrieve a subset of `chartevents.csv.gz` only containing these items for the patients in `icustays_tble` as a tibble `chartevents_tble`.
+1. We are interested in the vitals for ICU patients: heart rate (220045), mean 
+non-invasive blood pressure (220181), systolic non-invasive blood pressure (220179),
+body temperature in Fahrenheit (223761), and respiratory rate (220210). Retrieve
+a subset of `chartevents.csv.gz` only containing these items for the patients in
+`icustays_tble` as a tibble `chartevents_tble`.
 
-    Hint: `chartevents.csv.gz` is a data file too big to be read in by the `read_csv` function in its default setting. Utilize the `col_select` option in the `read_csv` function to reduce the memory burden. It took my computer >15 minutes to ingest this file. If your computer really has trouble importing `chartevents.csv.gz`, you can import from the reduced data file `chartevents_filtered_itemid.csv.gz`.
+    Hint: `chartevents.csv.gz` is a data file too big to be read in by the 
+    `read_csv` function in its default setting. Utilize the `col_select` option 
+    in the `read_csv` function to reduce the memory burden. It took my computer 
+    >15 minutes to ingest this file. If your computer really has trouble 
+    importing `chartevents.csv.gz`, you can import from the reduced data file 
+    `chartevents_filtered_itemid.csv.gz`.
 ```{r}
 system(
   str_c(
@@ -438,13 +460,16 @@ setwd("~/mimic/icu")
 chartevents_tble <- as_tibble(read_csv("chartevents_filtered_itemid.csv.gz", 
                                        show_col_types = FALSE)) %>%
   filter(subject_id %in% icustays_tble$subject_id) %>%
-  filter(itemid %in% c(220045, 220181, 220179, 223761, 220210))
+  filter(itemid %in% c(220045, 220181, 220179, 223761, 220210)) %>%
+  print(width = Inf)
 ```
 
-2. Further restrict `chartevents_tble` to the first vital measurement during the ICU stay. 
+2. Further restrict `chartevents_tble` to the first vital measurement during the
+ICU stay. 
 ```{r}
 chartevents_tble <- chartevents_tble %>% 
-  left_join(select(icustays_tble, subject_id, intime, outtime), by = "subject_id") %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime), 
+            by = "subject_id") %>%
   filter(charttime >= intime & charttime <= outtime) %>% 
   group_by(subject_id, itemid) %>% 
   filter(charttime == min(charttime)) %>%
@@ -466,11 +491,16 @@ chartevents_tble <- chartevents_tble %>%
 3. Summarize these vital measurements by appropriate numerics and graphics. 
 ```{r}
 head(chartevents_tble)
-ggplot(chartevents_tble, aes(`heart rate`)) + geom_boxplot()
-ggplot(chartevents_tble, aes(`non invasive blood pressure systolic`)) + geom_boxplot()
-ggplot(chartevents_tble, aes(`non invasive blood pressure mean`)) + geom_boxplot()
-ggplot(chartevents_tble, aes(`respiratory rate`)) + geom_boxplot()
-ggplot(chartevents_tble, aes(`temperature fahrenheit`)) + geom_boxplot()
+ggplot(chartevents_tble, aes(`heart rate`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(chartevents_tble, aes(`non invasive blood pressure systolic`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(chartevents_tble, aes(`non invasive blood pressure mean`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(chartevents_tble, aes(`respiratory rate`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
+ggplot(chartevents_tble, aes(`temperature fahrenheit`)) +
+  geom_boxplot(fill = "lightblue", color = "darkblue")
 ```
 ## Q7. Putting things together
 
