--- a/hw3/hw3.qmd
+++ b/hw3/hw3.qmd
@@ -147,13 +147,30 @@ labevents_tble <- labevents_tble %>%
 
 7. Connect to `chartevents` table and retrieve a subset that only contain subjects who appear in `icustays_tble` and the chart events listed in HW2.
 ```{r}
-# # TODO
-# chartevents_tble <- 
+d_items_tble <- tbl(con, "d_items") %>%
+  filter(itemid %in% c(220045, 220181, 220179, 223761, 220210)) %>%
+  show_query() %>%
+  print(width = Inf)
+chartevents_tble <- tbl(con, "chartevents") %>%
+  filter(itemid %in% c(220045, 220181, 220179, 223761, 220210)) %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime), "subject_id") %>%
+  show_query() %>%
+  print(width = Inf)
 ```
 Only keep the first chart events during ICU stay and pivot chart events to become variables/columns.
 ```{r}
-# # TODO
-# chartevents_tble <- chartevents_tble %>% ...
+chartevents_tble <- chartevents_tble %>% 
+  filter(charttime >= intime & charttime <= outtime) %>%
+  group_by(subject_id, itemid) %>% 
+  filter(charttime == min(charttime)) %>%
+  ungroup(subject_id, itemid) %>%  
+  select(subject_id, itemid, valuenum) %>%
+  left_join(select(d_items_tble, itemid, label), "itemid") %>%
+  select(-itemid) %>%
+  mutate(label = gsub(" ", "", label)) %>%
+  pivot_wider(names_from = label, values_from = valuenum) %>%
+  show_query() %>%
+  print(width = Inf)
 ```
 
 8. Put things together. This step is similar to Q7 of HW2. Using one chain of pipes `%>%` to perform following data wrangling steps: (i) start with the `icustays_tble` for the first ICU stay of each unique patient, (ii) merge in admissions and patients tables, (iii) keep adults only (age at admission >= 18), (iv) merge in the labevents and chartevents tables, (v) create an indicator for 30-day mortality, (vi) save the final tibble to an `icu_cohort.rds` R data file in the `mimiciv_shiny` folder.
