--- a/hw3/hw3.qmd
+++ b/hw3/hw3.qmd
@@ -34,7 +34,10 @@ library(lubridate)
 library(tidyverse)
 ```
 
-I found the current versions of bigrquery (v1.4.1) and dbplyr (v2.3.0) don't work well together on my computer ([Issue](https://github.com/r-dbi/bigrquery/issues/509)). If you encounter similar issues, you can install older versions of the these two packages.
+I found the current versions of bigrquery (v1.4.1) and dbplyr (v2.3.0) don't 
+work well together on my computer 
+([Issue](https://github.com/r-dbi/bigrquery/issues/509)). If you encounter 
+similar issues, you can install older versions of the these two packages.
 ```{r}
 #| eval: false
 library(devtools)
@@ -46,7 +49,9 @@ install_version("dbplyr", version = "2.1.1")
 
 Below is an outline of steps.
 
-1. Load the GCP BigQuery service account token. Please place the service account token (available at BruinLearn) at your MIMIC data folder: `~/mimic/biostat-203b-2022winter-3fdc2392ac39.json`.
+1. Load the GCP BigQuery service account token. Please place the service account
+token (available at BruinLearn) at your MIMIC data folder: 
+`~/mimic/biostat-203b-2022winter-3fdc2392ac39.json`.
 ```{r}
 # path to the service account token 
 satoken <- "~/mimic/biostat-203b-2023winter-3fdc2392ac39.json"
@@ -59,7 +64,8 @@ bq_auth(
 )
 ```
 
-1. Connect to BigQuery database `mimic4_v1_0_203b` in GCP (Google Cloud Platform), using the billing account `biostat-203b-2022winter`.
+1. Connect to BigQuery database `mimic4_v1_0_203b` in GCP 
+(Google Cloud Platform), using the billing account `biostat-203b-2022winter`.
 ```{r}
 # Connect to the BigQuery database `biostat-203b-2022winter.mimic4_v1_0_203b`
 con <- dbConnect(
@@ -83,7 +89,10 @@ icustays_tble <- tbl(con, "icustays") %>%
   show_query() %>%
   print(width = Inf)
 ```
-We only keep the first ICU stay. Following code is kind of a hack, using the `summarise_all(min)` function. It seems that `slice_min()`, `slice_head()`, `distinct(, .keep_all = TRUE)` don't work with `dbplyr`+`bigrquery` at the moment.
+We only keep the first ICU stay. Following code is kind of a hack, using the 
+`summarise_all(min)` function. It seems that `slice_min()`, `slice_head()`, 
+`distinct(, .keep_all = TRUE)` don't work with `dbplyr`+`bigrquery` at the 
+moment.
 ```{r}
 icustays_tble <- icustays_tble %>% 
   select(subject_id, intime) %>% 
@@ -93,7 +102,8 @@ icustays_tble <- icustays_tble %>%
   show_query() %>%
   print(width = Inf)
 ```
-4. Connect to the `admissions` table and only keep the patients who have a match in `icustays_tble` (according to `subject_id` and `hadm_id`).
+4. Connect to the `admissions` table and only keep the patients who have a match
+in `icustays_tble` (according to `subject_id` and `hadm_id`).
 ```{r}
 admissions_tble <- tbl(con, "admissions") %>%
   semi_join(icustays_tble, by = c("subject_id", "hadm_id")) %>%
@@ -101,7 +111,8 @@ admissions_tble <- tbl(con, "admissions") %>%
   print(width = Inf)
 ```
 
-5. Connect to the `patients` table and only keep the patients who have a match in `icustays_tble` (according to `subject_id`).
+5. Connect to the `patients` table and only keep the patients who have a match 
+in `icustays_tble` (according to `subject_id`).
 ```{r}
 patients_tble <-tbl(con, "patients") %>%
   semi_join(icustays_tble, "subject_id") %>%
@@ -109,21 +120,26 @@ patients_tble <-tbl(con, "patients") %>%
   print(width = Inf)
 ```
 
-6. Connect to the `labevents` table and retrieve a subset that only contain subjects who appear in `icustays_tble` and the lab items listed in HW2. 
+6. Connect to the `labevents` table and retrieve a subset that only contain 
+subjects who appear in `icustays_tble` and the lab items listed in HW2. 
 ```{r}
 d_labitems_tble <- tbl(con, "d_labitems") %>%
-  filter(itemid %in% c(50912, 50971, 50983, 50902, 50882, 51221, 51301, 50931)) %>%
+  filter(itemid %in% 
+           c(50912, 50971, 50983, 50902, 50882, 51221, 51301, 50931)) %>%
   show_query() %>%
   print(width = Inf)
 ```
 ```{r}
 labevents_tble <- tbl(con, "labevents") %>%
-  filter(itemid %in% c(50912, 50971, 50983, 50902, 50882, 51221, 51301, 50931)) %>%
-  left_join(select(icustays_tble, subject_id, intime, outtime), "subject_id") %>%
+  filter(itemid %in% 
+           c(50912, 50971, 50983, 50902, 50882, 51221, 51301, 50931)) %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime), 
+            "subject_id") %>%
   show_query() %>%
   print(width = Inf)
 ```
-Only keep the first lab measurements during ICU stay and pivot lab items to become variables/columns.
+Only keep the first lab measurements during ICU stay and pivot lab items to 
+become variables/columns.
 ```{r}
 labevents_tble <- labevents_tble %>%
   filter(charttime >= intime & charttime <= outtime) %>%
@@ -145,7 +161,8 @@ labevents_tble <- labevents_tble %>%
   print(width = Inf)
 ```
 
-7. Connect to `chartevents` table and retrieve a subset that only contain subjects who appear in `icustays_tble` and the chart events listed in HW2.
+7. Connect to `chartevents` table and retrieve a subset that only contain 
+subjects who appear in `icustays_tble` and the chart events listed in HW2.
 ```{r}
 d_items_tble <- tbl(con, "d_items") %>%
   filter(itemid %in% c(220045, 220181, 220179, 223761, 220210)) %>%
@@ -153,11 +170,13 @@ d_items_tble <- tbl(con, "d_items") %>%
   print(width = Inf)
 chartevents_tble <- tbl(con, "chartevents") %>%
   filter(itemid %in% c(220045, 220181, 220179, 223761, 220210)) %>%
-  left_join(select(icustays_tble, subject_id, intime, outtime), "subject_id") %>%
+  left_join(select(icustays_tble, subject_id, intime, outtime),
+            "subject_id") %>%
   show_query() %>%
   print(width = Inf)
 ```
-Only keep the first chart events during ICU stay and pivot chart events to become variables/columns.
+Only keep the first chart events during ICU stay and pivot chart events to 
+become variables/columns.
 ```{r}
 chartevents_tble <- chartevents_tble %>% 
   filter(charttime >= intime & charttime <= outtime) %>%
@@ -173,7 +192,13 @@ chartevents_tble <- chartevents_tble %>%
   print(width = Inf)
 ```
 
-8. Put things together. This step is similar to Q7 of HW2. Using one chain of pipes `%>%` to perform following data wrangling steps: (i) start with the `icustays_tble` for the first ICU stay of each unique patient, (ii) merge in admissions and patients tables, (iii) keep adults only (age at admission >= 18), (iv) merge in the labevents and chartevents tables, (v) create an indicator for 30-day mortality, (vi) save the final tibble to an `icu_cohort.rds` R data file in the `mimiciv_shiny` folder.
+8. Put things together. This step is similar to Q7 of HW2. Using one chain of 
+pipes `%>%` to perform following data wrangling steps: (i) start with the 
+`icustays_tble` for the first ICU stay of each unique patient, (ii) merge in 
+admissions and patients tables, (iii) keep adults only (age at admission >= 18),
+(iv) merge in the labevents and chartevents tables, (v) create an indicator for 
+30-day mortality, (vi) save the final tibble to an `icu_cohort.rds` R data file 
+in the `mimiciv_shiny` folder.
 
 ```{r}
 # make a directory mimiciv_shiny
@@ -209,5 +234,8 @@ rm(list = ls())
 
 ## Q2. Shiny app
 
-Develop a Shiny app for exploring the ICU cohort data created in Q1. The app should reside in the `mimiciv_shiny` folder. The app should provide easy access to the graphical and numerical summaries of variables (demographics, lab measurements, vitals) in the ICU cohort.
+Develop a Shiny app for exploring the ICU cohort data created in Q1. The app 
+should reside in the `mimiciv_shiny` folder. The app should provide easy access 
+to the graphical and numerical summaries of variables (demographics, lab 
+measurements, vitals) in the ICU cohort.
 
