--- a/hw4/hw4.qmd
+++ b/hw4/hw4.qmd
@@ -37,11 +37,20 @@ suppressPackageStartupMessages(library(dplyr))
 suppressPackageStartupMessages(library(gtsummary))
 suppressPackageStartupMessages(library(GGally))
 suppressPackageStartupMessages(library(kernlab))
+suppressPackageStartupMessages(library(ranger))
 ```
 
 ## Predicting 30-day mortality
 
-Using the ICU cohort `icu_cohort.rds` you built in Homework 3, develop at least three analytic approaches for predicting the 30-day mortality of patients admitted to ICU using demographic information (gender, age, marital status, ethnicity), first lab measurements during ICU stay, and first vital measurements during ICU stay. For example, you can use (1) logistic regression with elastic net (lasso + ridge) penalty (e.g., glmnet or keras package), (2) random forest, (3) boosting, and (4) support vector machines, or (5) MLP neural network (keras package)
+Using the ICU cohort `icu_cohort.rds` you built in Homework 3, develop at least 
+three analytic approaches for predicting the 30-day mortality of patients 
+admitted to ICU using demographic information (gender, age, marital status, 
+ethnicity), first lab measurements during ICU stay, and first vital measurements
+during ICU stay. For example, you can use (1) logistic regression with elastic 
+net (lasso + ridge) penalty (e.g., glmnet or keras package), (2) random forest, 
+(3) boosting, and (4) support vector machines, or (5) MLP neural network 
+(keras package).
+
 ```{r}
 icu_cohort <- readRDS("icu_cohort.rds") %>%
   select(
@@ -67,6 +76,7 @@ icu_cohort <- readRDS("icu_cohort.rds") %>%
 icu_cohort %>% tbl_summary(by = thirty_day_mort)
 ```
 ```{r}
+# Choose features we're interested in including in the model
 cat_features <- c("first_careunit", "admission_type", "insurance","ethnicity",
                   "gender")
 num_features <- c("age_hadm", "wbc", "glucose","heart_rate", "respiratory_rate")
@@ -76,20 +86,30 @@ features <- c(cat_features, num_features)
 icu_tbl <- icu_cohort %>%
   select(features, thirty_day_mort) %>%
   print(width = Inf)
-icu_tbl$first_careunit <- fct_lump_prop(icu_tbl$first_careunit, prop = 0.15, w = NULL, other_level = "Other")
-icu_tbl$admission_type <- fct_lump_prop(icu_tbl$admission_type, prop = 0.10, w = NULL, other_level = "Other")
-icu_tbl$ethnicity <- fct_lump_prop(icu_tbl$ethnicity, prop = 0.04, w = NULL, other_level = "Other")
+
+# Many categorical variables have too many minor levels, so combine levels into 
+# "Other" category by proportion
+
+icu_tbl$first_careunit <- fct_lump_prop(icu_tbl$first_careunit, prop = 0.15, 
+                                        w = NULL, other_level = "Other")
+icu_tbl$admission_type <- fct_lump_prop(icu_tbl$admission_type, prop = 0.10, 
+                                        w = NULL, other_level = "Other")
+icu_tbl$ethnicity <- fct_lump_prop(icu_tbl$ethnicity, prop = 0.04, w = NULL, 
+                                   other_level = "Other")
 icu_tbl$thirty_day_mort <- as.factor(icu_tbl$thirty_day_mort)
 tbl_summary(icu_tbl, by = thirty_day_mort)
 ```
 
 
 ```{r}
+# Visualize data by thirty_day_mort
+
 icu_tbl %>% ggpairs(columns = 1:5, ggplot2::aes(colour = thirty_day_mort))
 icu_tbl %>% ggpairs(columns = 6:10, ggplot2::aes(colour = thirty_day_mort))
 ```
 
-1. Partition data into 50% training set and 50% test set. Stratify partitioning according the 30-day mortality status.
+1. Partition data into 50% training set and 50% test set. Stratify partitioning 
+according the 30-day mortality status.
 ```{r}
 set.seed(203)
     
@@ -109,14 +129,15 @@ dim(icu_test)
 ```
 
 
-2. Train and tune the models using the training set.
+2. Train and tune the models (random forest, logistic regression with e-net 
+regularization, SVM with radial basis kernel) using the training set.
 ```{r}
-#Random Forest Recipe
+# Random forest recipe
 rf_recipe <- recipe(
   thirty_day_mort ~.,
   data = icu_other
 ) %>%
-  #mode imputation for ethnicity (categorical) for missing/`Unknown` values
+  # mode imputation for ethnicity (categorical) for missing/`Unknown` values
   step_impute_mode(ethnicity) %>%
   # mean imputation for `wbc`, `glucose`, `heart_rate`, and `respiratory rate`
   # which have some but not many missing/unknown values
@@ -126,14 +147,11 @@ rf_recipe <- recipe(
   step_impute_mean(respiratory_rate) %>%
   # zero-variance filter on numerical predictors
   step_zv(all_numeric_predictors()) %>%
-  # step_dummy(all_nominal()) %>%
-  # step_normalize(all_numeric_predictors()) %>%
   step_impute_linear(all_numeric_predictors()) %>%
   prep(training = icu_other, retrain = TRUE)
 rf_recipe
-```
-```{r}
-#Random Forest Model
+
+# Random forest model
 rf_mod <- rand_forest(
   mode = "classification",
   mtry = tune(),
@@ -141,16 +159,14 @@ rf_mod <- rand_forest(
 ) %>%
   set_engine("ranger")
 rf_mod
-```
-```{r}
-#Random Forest workflow
+
+# Random forest workflow
 rf_wf <- workflow() %>%
   add_recipe(rf_recipe) %>%
   add_model(rf_mod)
 rf_wf
-```
-```{r}
-#Random Forest Tuning
+
+# Random forest tuning
 param_grid_rf <- grid_regular(
   trees(range = c(100L, 300L)),
   mtry(range = c(1L, 5L)),
@@ -158,23 +174,27 @@ param_grid_rf <- grid_regular(
 )
 param_grid_rf
 ```
+
 ```{r}
-#RF Cross Validation
+# RF Cross Validation
 set.seed(203)
-folds <- vfold_cv(icu_other, v = 3)
+folds <- vfold_cv(icu_other, v = 5)
 folds
 
-#Fit cross validation
-rf_fit <- rf_wf %>%
+# RF Fit cross validation
+system.time({
+  rf_fit <- rf_wf %>%
   tune_grid(
     resamples = folds,
     grid = param_grid_rf,
     metrics = metric_set(roc_auc, accuracy)
   )
+})
+
 rf_fit
 ```
 ```{r}
-#Visualize CV results
+# Visualize random forest cross validation results
 rf_fit %>% collect_metrics() %>%
   print(width = Inf) %>%
   filter(.metric == "roc_auc") %>%
@@ -188,7 +208,7 @@ best_rf <- rf_fit %>%
 best_rf
 ```
 ```{r}
-#Logistical Recipe
+# Logistical recipe
 logi_recipe <-
   recipe(
     thirty_day_mort ~ .,
@@ -208,9 +228,8 @@ logi_recipe <-
   step_normalize(all_numeric_predictors()) %>%
   prep(training = icu_other, retrain = TRUE)
 logi_recipe
-```
-```{r}
-#Logistic Model
+
+# Logistic model
 logi_model <- 
   logistic_reg(
    penalty = tune(),
@@ -218,16 +237,14 @@ logi_model <-
   ) %>%
   set_engine("glmnet", standardize = FALSE)
 logi_model
-```
-```{r}
-#Logistic Workflow
+
+# Logistic workflow
 logi_wf <- workflow() %>%
   add_recipe(logi_recipe) %>%
   add_model(logi_model)
 logi_wf
-```
-```{r}
-#Logistic Tuning grid
+
+# Logistic tuning grid
 param_grid_l <- grid_regular(
   penalty(range = c(-6,3)),
   mixture(),
@@ -235,20 +252,21 @@ param_grid_l <- grid_regular(
 )
 param_grid_l
 ```
-```{r}
-#Logistic Cross Validation using same folds as RF
 
-logi_fit <- logi_wf %>%
+```{r}
+# Logistic Cross Validation using same folds as RF
+system.time({
+  logi_fit <- logi_wf %>%
   tune_grid(
     resamples = folds,
     grid = param_grid_l,
     metrics = metric_set(roc_auc, accuracy)
   )
+})
 logi_fit
 ```
 ```{r}
-#Visualize Logistic Regression Results
-
+# Visualize logistic regression results
 logi_fit %>%
   collect_metrics() %>%
   print(width = Inf) %>%
@@ -259,17 +277,17 @@ logi_fit %>%
   scale_x_log10()
 ```
 ```{r}
-#Top 5 Logistic Models
+# Top 5 Logistic Models
 logi_fit %>%
   show_best("roc_auc")
 
-#Select the best
+# Select the best
 best_logi <- logi_fit %>%
   select_best("roc_auc")
 best_logi
 ```
 ```{r}
-#SVM with RBF Kernel Recipe
+# SVM with RBF kernel recipe
 svm_recipe <- recipe(
   thirty_day_mort ~ .,
   data = icu_other
@@ -289,7 +307,7 @@ svm_recipe <- recipe(
   prep(training = icu_other, retrain = TRUE)
 svm_recipe
 
-#SVM Model
+# SVM model
 svm_model <- svm_rbf(
   mode = "classification",
   cost = tune(),
@@ -297,14 +315,14 @@ svm_model <- svm_rbf(
 ) %>% set_engine("kernlab")
 svm_model
 
-#SVM Workflow
+# SVM workflow
 
 svm_wf <- workflow() %>%
   add_recipe(svm_recipe) %>%
   add_model(svm_model)
 svm_wf
 
-#SVM Tuning Grid
+# SVM tuning Grid
 
 param_grid_svm <- grid_regular(
   cost(range = c(-8, 5)), 
@@ -314,17 +332,18 @@ param_grid_svm <- grid_regular(
 param_grid_svm
 ```
 ```{r}
-#SVM Cross Validation
-
-svm_fit <- svm_wf %>%
+# SVM Cross Validation
+system.time({
+  svm_fit <- svm_wf %>%
   tune_grid(
     resamples = folds,
     metrics = metric_set(roc_auc, accuracy)
   )
+})
 svm_fit
 ```
 ```{r}
-#Visualize SVM CV Results
+# Visualize SVM CV Results
 svm_fit %>%
   collect_metrics() %>%
   print(width = Inf) %>%
@@ -334,17 +353,18 @@ svm_fit %>%
   labs(x = "Cost", y = "CV AUC") + scale_x_log10()
 ```
 ```{r}
-#Show top 5 SVM Models
+# Show top 5 SVM Models
 svm_fit %>%
   show_best("roc_auc")
 
-#Select best SVM model
+# Select best SVM model
 best_svm <- svm_fit %>%
   select_best("roc_auc")
 best_svm
 ```
 
-3. Compare model classification performance on the test set. Report both the area under ROC curve and accuracy for each model.
+3. Compare model classification performance on the test set. Report both the 
+area under ROC curve and accuracy for each model.
 ```{r}
 #Final RF workflow
 final_wf <- rf_wf %>%
@@ -386,4 +406,7 @@ final_fit_svm
 final_fit_svm %>%
   collect_metrics()
 ```
-
+The random forest method and logistical regression methods of classification 
+seem to be better than SVM method. Random forest has the highest ROC, but not 
+significantly higher than that of the logistical method. Random forest and 
+logistical regression also had the shortest run time. 
